# DogovorAI

./: .dockerignore  .env  .env.example  .env.vercel.example  .gitignore  .vercelignore  ANALYTICS_SETUP.md  AUTH_IMPLEMENTATION.md  CODE_REVIEW_REPORT.md  DEPLOY_NETLIFY_AUTH.md  Dockerfile  GOOGLE_AUTH_SETUP.md  INIT_SUMMARY.md  README.md  ROADMAP.md  SKILLS.md  START_GUIDE.md  ai_service.py  alembic.ini  docker-compose.yml  document_processing_report.md  fix_column_types.sql  fix_missing_columns.sql  main.py  netlify.toml  package-lock.json  package.json  prometheus.yml  pyproject.toml  requirements-dev.txt  requirements-vercel.txt  requirements.txt  requirements_minimal.txt  setup.cfg  supabase_migration.sql  tailwind.config.js  test_app.py  utils.py  vercel.json
.agents/workflows/: document_processing.md
alembic/: alembic.ini  env.py
alembic/versions/: 001_initial.py  002_add_consent.py
app/: __init__.py
app/api/: admin.py  analysis.py  auth.py  contracts.py  deps.py  health.py  history.py  metrics.py  paypal.py  subscriptions.py
app/data/: __init__.py  legal_knowledge_base.py
app/models/: __init__.py  crud.py  database.py  document.py  models.py  schemas.py
app/schemas/: __init__.py  contract.py
app/services/: ai_service.py  auth_context.py  auth_service.py  contract_generator.py  contract_suggest.py  database_service.py  email_service.py  file_service.py  legal_service.py  paypal_service.py  subscription_service.py  usage_limiter.py  verification_service.py
app/templates_docx/: labor_contract.docx  sale_contract.docx
backups/: backup_20260523_141317.sql
config/: database.py  postgres.py  settings.py
frontend/: _redirects  admin_dashboard.html  admin_login.html  analysis_progress.html  auth_callback.html  contracts.html  history.html  index.html  landing.html  login.html  metrics.html  pricing.html  profile.html  register.html
frontend/css/: admin.css  contracts.css  design-system-ext.css  history.css  paywall.css  privacy.css  profile.css  register.css  style.css  tailwind-built.css
frontend/js/: analytics_helper.js  app.js  auth-guard.js  auth.js  dashboard.js  global_actions.js  history.js  login.js  nav.js  paywall.js  privacy.js  profile.js  register.js  speed-insights.js
netlify/functions/: api.py
processed_documents/: requirements.txt.txt  requirements.txt_meta.json  requirements_minimal.txt.txt  requirements_minimal.txt_meta.json
scratch/: test_ai.py
scripts/: backup.sh  create_templates.py  init_db.py  migrate_usage_columns.py  run_dev.sh  setup_google_auth.sql  setup_subscriptions.sql
tests/: conftest.py  test_admin_security.py  test_ai_service.py  test_auth.py  test_contract_generator.py  test_contract_suggest.py  test_contracts_analysis_api.py  test_crud.py  test_deps_security.py  test_file_service.py  test_health.py  test_legal_service.py  test_models.py  test_paypal_webhook.py  test_schemas.py  test_stripe_webhook.py  test_usage_limiter.py
