[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dogovor-ai"
version = "0.1.0"
description = "Intelligent assistant for analyzing and automating legal documents"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "DogovorAI Team", email = "team@dogovor-ai.com"}
]
# КРИТИЧЕСКИ ВАЖНО: Зависимости должны быть строго здесь, до появления любых [tool.*] блоков
dependencies = [
    "fastapi>=0.100.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "supabase>=2.0.0",
    "uvicorn>=0.22.0",
    "python-multipart>=0.0.6",
    "psycopg2-binary>=2.9.0",
    "sqlalchemy>=2.0.0",
    "pytesseract>=0.3.10",
    "stripe>=9.0.0",
]

# ---- НАСТРОЙКА СБОРКИ ДЛЯ VERCEL / SETUPTOOLS ----
[tool.setuptools.packages.find]
include = ["app*", "config*", "alembic*"]

[tool.setuptools]
py-modules = ["main"]

# ---------------- ДРУГИЕ ИНСТРУМЕНТЫ --------------
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.isort]
profile = "black"
line_length = 100
