[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dogovor-ai"
version = "0.1.0"
description = "Intelligent assistant for analyzing and automating legal documents"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "DogovorAI Team", email = "team@dogovor-ai.com"}
]
# КРИТИЧЕСКИ ВАЖНО: Зависимости должны быть строго здесь, до появления любых [tool.*] блоков
dependencies = [
    "fastapi>=0.104.1",
    "pydantic[email]>=2.11.7",
    "pydantic-settings>=2.1.0",
    "supabase>=2.28.0",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
    "psycopg2-binary>=2.9.9",
    "sqlalchemy>=2.0.23",
    "pytesseract>=0.3.10",
    "stripe>=15.0.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.1.2",
    "email-validator>=2.1.0",
    "python-jose[cryptography]>=3.3.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.28.0",
    "aiohttp>=3.9.1",
    "mangum>=0.17.0",
    "pypdf>=3.17.0",
    "python-docx>=1.1.2",
    "Pillow>=10.1.0",
    "openai>=1.50.0",
    "asyncpg>=0.29.0",
    "alembic>=1.12.1",
]

# ---- НАСТРОЙКА СБОРКИ ДЛЯ VERCEL / SETUPTOOLS ----
[tool.setuptools.packages.find]
include = ["app*", "config*", "alembic*"]

[tool.setuptools]
py-modules = ["main"]

# ---------------- ДРУГИЕ ИНСТРУМЕНТЫ --------------
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.isort]
profile = "black"
line_length = 100
